src/objects/SolicitudBeca__c.object
<CustomObject>
    <fields>
        <fullName>AsignacionBecaConvenio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asignación Beca Convenio/Descuento</label>
        <referenceTo>BecaConvenioAsignacion__c</referenceTo>
        <relationshipLabel>Solicitudes de beca</relationshipLabel>
        <relationshipName>SolicitudesBeca</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beca</label>
        <referenceTo>Beca__c</referenceTo>
        <relationshipLabel>Solicitudes de beca</relationshipLabel>
        <relationshipName>SolicitudesBeca</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <label>Estatus</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rechazada</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Solicitudes de beca</relationshipLabel>
        <relationshipName>SolicitudesBeca</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LetraBecaComercial__c</fullName>
        <label>Letra de Beca Comercial</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreConvenio__c</fullName>
        <formula>Beca__r.NombreConvenio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de convenio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Solicitudes de beca</relationshipLabel>
        <relationshipName>SolicitudesBeca</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Porcentaje__c</fullName>
        <label>Porcentaje</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TipoBeca__c</fullName>
        <label>Tipo de Beca</label>
        <picklist>
            <picklistValues>
                <fullName>Convenio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Solicitud de beca</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Oportunidad__c</columns>
        <columns>Lead__c</columns>
        <columns>Porcentaje__c</columns>
        <columns>TipoBeca__c</columns>
        <columns>Beca__c</columns>
        <columns>LetraBecaComercial__c</columns>
        <columns>NombreConvenio__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>AutorizaBecaConvenio_SolicitudBeca</fullName>
        <filterScope>Queue</filterScope>
        <label>Autoriza Beca Convenio</label>
        <queue>AutorizaBecaConvenio</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AutorizaBecas_SolicitudBeca</fullName>
        <filterScope>Queue</filterScope>
        <label>Autoriza Becas Comercial</label>
        <queue>AutorizaBecas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Nombre de Solicitud de beca</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitudes de beca</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>